--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,16 +1,3 @@
-.main-nav__toggle {
-	position: absolute;
-	top: 23px;
-	right: 20px;
-	z-index: 2;
-
-	width: 24px;
-	height: 18px;
-
-	background-color: transparent;
-	border: none;
-}
-
 .main-nav__list {
 	margin: 0;
 	padding: 0;
@@ -18,69 +5,91 @@
 	list-style: none;
 }
 
-.main-nav--closed .main-nav__toggle {
+@media (max-width: $mobile-only-width) {
 
-	&::before {
-		content: "";
-
+	.main-nav__toggle {
 		position: absolute;
-		top: 0;
-		left: 0;
-		z-index: 3;
-
-		width: 24px;
-		height: 2px;
-		
-		background-color: #222222;
-		box-shadow: 
-			0 8px 0 0 #222222,
-			0 16px 0 0 #222222;
-	}
-}
-
-.main-nav--closed .main-nav__list {
-	display: none;
-}
-
-.main-nav--opened .main-nav__list {
-	display: block;
-}
-
-.main-nav--opened .main-nav__toggle {
-	width: 22px;
-	height: 22px;
-
-	top: 20px;
-	right: 23px;
-
-	&::before,
-	&::after {
-		content: "";
-
-		position: absolute;
-		top: 50%;
-		right: 50%;
+		top: 23px;
+		right: 20px;
 		z-index: 2;
 
 		width: 24px;
-		height: 2px;
+		height: 18px;
 
-		background-color: #0f0f0f;
+		background-color: transparent;
+		border: none;
 	}
 
-	&::before {
-		transform: translate(50%, -50%) rotate(-45deg);
-	}	
-	
-	&::after {
-		transform: translate(50%, -50%) rotate(45deg);
-	}		
+	.main-nav--closed .main-nav__toggle {
+
+		&::before {
+			content: "";
+
+			position: absolute;
+			top: 0;
+			left: 0;
+			z-index: 3;
+
+			width: 24px;
+			height: 2px;
+			
+			background-color: #222222;
+			box-shadow: 
+				0 8px 0 0 #222222,
+				0 16px 0 0 #222222;
+		}
+	}
+
+	.main-nav--closed .main-nav__list {
+		display: none;
+	}
+
+	.main-nav--opened .main-nav__list {
+		display: block;
+	}
+
+	.main-nav--opened .main-nav__toggle {
+		width: 22px;
+		height: 22px;
+
+		top: 20px;
+		right: 23px;
+
+		&::before,
+		&::after {
+			content: "";
+
+			position: absolute;
+			top: 50%;
+			right: 50%;
+			z-index: 2;
+
+			width: 24px;
+			height: 2px;
+
+			background-color: #0f0f0f;
+		}
+
+		&::before {
+			transform: translate(50%, -50%) rotate(-45deg);
+		}	
+		
+		&::after {
+			transform: translate(50%, -50%) rotate(45deg);
+		}		
+	}
+
+	.main-nav--nojs .main-nav__list {
+		display: block;
+	}
+
+	.main-nav--nojs .main-nav__toggle {
+		display: none;
+	}
 }
 
-.main-nav--nojs .main-nav__list {
-	display: block;
-}
-
-.main-nav--nojs .main-nav__toggle {
-	display: none;
+@media (min-width: $tablet-width) {
+	.main-nav__toggle {
+		display: none;
+	}
 }
