--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,15 +1,11 @@
 .page-header {
-	background-color: #ffffff;
 	border-bottom: 1px solid #e6e6e6;
-}
-
-.page-header__logo {
-	cursor: pointer;
 }
 
 .page-header__logo-image {
 	padding: 0 20px;
-	height: 62px;
+	padding-top: 14px;
+	padding-bottom: 8px;
 }
 
 .page-header__logo-tablet {
@@ -18,4 +14,78 @@
 
 .page-header__logo-desktop {
 	display: none;
+}
+
+@media (min-width: $tablet-width) {
+	.page-header {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		padding: 0 30px;
+		padding-top: 24px;
+
+		border-bottom: none;
+	}
+
+	.page-header__logo-image {
+		padding: 0;
+		width: 172px;
+		height: 57px;
+	}
+
+	.page-header__logo-mobile {
+		display: none;
+	}
+
+	.page-header__logo-tablet {
+		display: block;
+	}
+}
+
+@media (min-width: $desktop-width) {
+	.page-header {
+		margin: 0 auto;
+		padding: 0 110px;
+		padding-top: 54px;
+		width: 1220px;
+
+		&::before {	
+			content: "";
+			
+			position: absolute;
+			top: 0;
+			right: 0;
+			z-index: -1;
+
+			width: 50%;
+			height: 696px;
+			
+			background-color: #65a93c;
+			background-image: 
+			  url("../img/nutrition-program/index-background-desktop@1x.jpg");
+			background-repeat: no-repeat;
+			background-position: right 0;
+			background-size: 720px;
+
+			@media (min-resolution: $resolution-dpi),
+			       (min-resolution: $resolution-dppx) {
+
+				background-image: 
+			  	  url("../img/nutrition-program/index-background-desktop@2x.jpg");
+			}
+		}
+	}
+
+	.page-header__logo-image {
+		width: 202px;
+		height: 60px;
+	}
+
+	.page-header__logo-tablet {
+		display: none;
+	}
+
+	.page-header__logo-desktop {
+		display: block;
+	}
 }
