--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -57,3 +57,20 @@ input[type="radio"].visually-hidden {
 	clip: rect(0 0 0 0);
 	overflow: hidden;
 }
+
+.button	{
+	display: inline-block;
+	padding: 10px 73px;
+
+	font-size: 14px;
+	line-height: 18px;
+	font-weight: 400;
+	color: #ffffff;
+	text-transform: uppercase;
+	text-align: center;
+
+	vertical-align: middle;
+	background-color: #68b738;
+	
+	box-sizing: border-box;
+}
