--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,3 +4,4 @@
 @import "blocks/page-header.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/site-list.scss";
+@import "blocks/nutrition-program.scss"
