Поменял цвет background

--- a/source/sass/blocks/nutrition-program.scss
+++ b/source/sass/blocks/nutrition-program.scss
@@ -1,5 +1,5 @@
 .nutrition-program {
-	background-color: #63a73a;
+	background-color: #64a83b;
 	background-image:
 	  linear-gradient(to top, #ffffff 170px, transparent 170px), 
 	  url("../img/nutrition-program/index-background-mobile@1x.jpg");
