--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,4 +4,5 @@
 @import "blocks/page-header.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/site-list.scss";
-@import "blocks/nutrition-program.scss"
+@import "blocks/nutrition-program.scss";
+@import "blocks/categories.scss";
