--- a/source/sass/blocks/categories.scss
+++ b/source/sass/blocks/categories.scss
@@ -157,6 +157,10 @@
 		padding: 59px 53px;
     	padding-top: 76px;
 
+    	&:last-child {
+    		margin-bottom: 43px;
+    	}
+
 		&::before {
 			content: "";
 
@@ -273,6 +277,7 @@
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: space-between;
+		margin-bottom: 43px;
 	}
 
 	.categories__item {
@@ -280,9 +285,14 @@
 		flex-direction: column;
 		margin-bottom: 30px;
 		padding: 44px 53px;
+		padding-bottom: 62px;
 		width: 570px;
 
 		box-sizing: border-box;
+
+		&:last-child {
+    		margin-bottom: 30px;
+    	}
 
 		&::before {
 			display: none;
