Добавил import advantages

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,3 +6,4 @@
 @import "blocks/site-list.scss";
 @import "blocks/nutrition-program.scss";
 @import "blocks/categories.scss";
+@import "blocks/advantages.scss";
