Добавил import result

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,3 +7,4 @@
 @import "blocks/nutrition-program.scss";
 @import "blocks/categories.scss";
 @import "blocks/advantages.scss";
+@import "blocks/result.scss";
