--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,3 +9,5 @@
 @import "blocks/advantages.scss";
 @import "blocks/result.scss";
 @import "blocks/map.scss";
+@import "blocks/page-footer.scss";
+@import "blocks/social-list.scss";
