--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,6 +1,7 @@
 @import "variables.scss";
 @import "scaffolding.scss";
 
+@import "blocks/page-internal.scss";
 @import "blocks/page-header.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/site-list.scss";
@@ -10,4 +11,7 @@
 @import "blocks/result.scss";
 @import "blocks/map.scss";
 @import "blocks/page-footer.scss";
+@import "blocks/footer-nav.scss";
 @import "blocks/social-list.scss";
+
+@import "blocks/catalog.scss";
