--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -19,6 +19,10 @@
 
 .catalog__item {
 	border-top: 1px solid #ededed;
+
+	&:last-child {
+		border-bottom: 1px solid #ededed;
+	}
 }
 
 .caralog__wrapper-item {
@@ -82,7 +86,7 @@
 .catalog__button {
 	padding: 10px 20px;
 	width: 100%;
-
+	
 	font-size: 16px;
 	line-height: 20px;
 
@@ -216,6 +220,7 @@
 			justify-content: center;
 
 			background-image: none;
+			border-bottom: none;
 		}
 	}
 
