--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -172,8 +172,9 @@
 	}
 
 	.additional__title {
-		margin-bottom: 71px;
-		padding-top: 10px;
+		margin-bottom: 80px;
+		padding-top: 7px;
+		padding-left: 9px;
 
 		font-size: 36px;
 		line-height: 36px;
@@ -186,13 +187,13 @@
 
 			background-color: #68b738;
 
-			transform: translate(-30px, 4px);
+			transform: translate(-39px, 5px);
 		}
 
 		&::after {
 			width: 327px;
 
-			transform: translate(30px, 4px);
+			transform: translate(36px, 5px);
 		}
 	}
 
@@ -201,7 +202,7 @@
 	}
 
 	.additional__item {
-		padding: 27px;
+		padding: 28px 37px;
 
 		border: 1px solid #cdcdcd;
 		border-bottom: none;
@@ -297,7 +298,27 @@
 	}
 
 	.additional__title {
-		padding-top: 24px;
+		padding-top: 20px;
+		padding-left: 0;
+		margin-left: -28px;
+		margin-bottom: 75px;
+
+		&::before {
+			content: "";
+
+			width: 28px;
+			height: 3px;
+
+			background-color: #68b738;
+
+			transform: translate(-39px, 5px);
+		}
+
+		&::after {
+			width: 327px;
+
+			transform: translate(100px, 5px);
+		}
 	}
 
 	.additional__container {
@@ -323,20 +344,17 @@
 	}
 
 	.additional__container-item {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
 		margin-bottom: 0;
 	}
 
 	.additional__item-title {
 		margin-right: 40px;
-		width: 285px;
+		min-width: 285px;
 	}
 
 	.additional__container-value {
 		margin-right: 40px;
-		width: 285px;
+		min-width: 285px;
 	}
 
 	.additional__value {
