--- a/source/sass/blocks/nutrition-program.scss
+++ b/source/sass/blocks/nutrition-program.scss
@@ -49,10 +49,10 @@
 	text-transform: uppercase;
 }
 
-.nutrition-program__img {
-	width: 280px;
-	height: 271px;
-}
+// .nutrition-program__img {
+// 	width: 280px;
+// 	height: 271px;
+// }
 
 .nutrition-program__link {
 	width: 100%;
@@ -114,10 +114,10 @@
 		color: #111111;
 	}
 
-	.nutrition-program__img {
-		width: 709px;
-		height: 609px;
-	}
+	// .nutrition-program__img {
+	// 	width: 709px;
+	// 	height: 609px;
+	// }
 
 	.nutrition-program__link {	
 		position: absolute;
@@ -183,7 +183,7 @@
 		right: 328px;
 		z-index: 3;
 
-		width: 552px;
-		height: auto;
+		// width: 552px;
+		// height: auto;
 	}
 }
