--- a/source/sass/blocks/footer-nav.scss
+++ b/source/sass/blocks/footer-nav.scss
@@ -12,6 +12,9 @@
 }
 
 .footer-nav__img-link[href] {
+	transition-property: opacity;
+	transition-duration: 0.1s;
+	transition-timing-function: linear;
 
 	&:focus {
 		opacity: 0.8;
@@ -42,22 +45,30 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+		
+	transition-property: opacity;
+	transition-duration: 0.05s;
+	transition-timing-function: linear;
 
 	&:focus {
-		.social-list__htmlacademy {
+		.footer-nav__copyright-logo {
 			fill: #68b738;
 		}
 	}
 
 	&:active {
-		.social-list__htmlacademy {
-			fill: rgba(104, 183, 56, 0.3);
-		}
+		opacity: 0.3;
 
-		.footer-nav__copyright-text {
-			color: rgba(68, 68, 68, 0.3);
+		.footer-nav__copyright-logo {
+			fill: #68b738;
 		}
 	}
+}
+
+.footer-nav__copyright-logo {
+	transition-property: fill;
+	transition-duration: 0.1s;
+	transition-timing-function: linear;
 }
 
 .footer-nav__copyright-text {
@@ -66,10 +77,6 @@
 	line-height: 16px;
 	font-weight: 400;
 	color: #444444; 
-}
-
-.footer-nav__htmlacademy {
-	fill: #666666;
 }
 
 @media (min-width: $tablet-width) {
@@ -108,14 +115,8 @@
 		justify-content: flex-end;
 
 		&:hover {
-			.social-list__htmlacademy {
+			.footer-nav__copyright-logo {
 				fill: #68b738;
-			}
-		}
-
-		&:active {
-			.social-list__htmlacademy {
-				fill: rgba(104, 183, 56, 0.3);
 			}
 		}
 	}
