--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -3,6 +3,9 @@
 }
 
 .page-header__logo[href] {
+	transition-property: opacity;
+	transition-duration: 0.1s;
+	transition-timing-function: linear;
 
 	&:focus {
 		opacity: 0.8;
