--- a/source/sass/blocks/program.scss
+++ b/source/sass/blocks/program.scss
@@ -74,6 +74,7 @@
 	cursor: default;
 	outline: none;
 	border: 1px solid rgba(205, 205, 205, 0.5);
+	border-radius: 0;
 
 	box-sizing: border-box;
 
