Правки под кроссбраузерность

--- a/source/sass/blocks/program.scss
+++ b/source/sass/blocks/program.scss
@@ -75,6 +75,7 @@
 	outline: none;
 	border: 1px solid rgba(205, 205, 205, 0.5);
 	border-radius: 0;
+	box-shadow: none;
 
 	box-sizing: border-box;
 
@@ -264,6 +265,7 @@
 	outline: none;
 	border: 1px solid rgba(205, 205, 205, 0.5);
 	border-radius: 0;
+	box-shadow: none;
 
 	box-sizing: border-box;
 
@@ -378,6 +380,7 @@
 	resize: none;
 	border: 1px solid rgba(205, 205, 205, 0.5);
 	border-radius: 0;
+	box-shadow: none;
 
 	transition-property: border-color, box-shadow;
 	transition-duration: 0.05s;
