--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -3,12 +3,11 @@
 }
 
 .additional__title {
+	position: relative;
+
 	margin: 0;
 	margin-bottom: 33px;
 	padding-top: 29px;
-
-	display: flex;
-	align-items: center;
 
 	font-size: 24px;
 	line-height: 24px;
@@ -18,15 +17,15 @@
 	&::after {
 		content: "";
 
-		flex-grow: 1;
-		flex-shrink: 0;
+		position: absolute;
+		top: 42px;
+		right: -20px;
+		z-index: 1;
 
-		width: 53px;
+		width: calc(100vw - 267px);
 		height: 3px;
 
 		background-color: #68b738;
-
-		transform: translate(20px, 2px);
 	}
 }
 
@@ -173,27 +172,31 @@
 
 	.additional__title {
 		margin-bottom: 80px;
-		padding-top: 7px;
-		padding-left: 9px;
+		padding-top: 9px;
+		padding-left: 37px;
 
 		font-size: 36px;
 		line-height: 36px;
 
 		&::before {
 			content: "";
+			
+			position: absolute;
+			top: 31px;
+			left: -30px;
+			z-index: 1;
 
 			width: 28px;
 			height: 3px;
 
 			background-color: #68b738;
-
-			transform: translate(-39px, 5px);
 		}
 
 		&::after {
-			width: 327px;
+			top: 31px;
+			right: -30px;
 
-			transform: translate(36px, 5px);
+			width: calc(100vw - 441px);
 		}
 	}
 
@@ -291,33 +294,27 @@
 
 @media (min-width: $desktop-width) {
 	.additional__wrapper {
-		margin: 0 auto;
 		margin-bottom: 86px;
-		padding: 0 110px;
-		width: 1220px;
+		padding: 0;
 	}
 
 	.additional__title {
+		padding: 0 calc((100vw - 1220px) / 2);
 		padding-top: 20px;
-		padding-left: 0;
-		margin-left: -28px;
 		margin-bottom: 75px;
 
 		&::before {
-			content: "";
+			top: 40px;
+			left: 0;
 
-			width: 28px;
-			height: 3px;
-
-			background-color: #68b738;
-
-			transform: translate(-39px, 5px);
+			width: calc(50vw - 650px);
 		}
 
 		&::after {
-			width: 327px;
-
-			transform: translate(100px, 5px);
+			top: 40px;
+			right: 0;
+			
+			width: calc(50vw + 217px);
 		}
 	}
 
@@ -325,6 +322,9 @@
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
+		margin: 0 auto;
+		padding: 0 110px;
+		width: 1220px;
 	}
 
 	.additional__list {
