--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -21,7 +21,7 @@ body {
 	padding: 0;
 	min-width: 320px;
 
-	font-family: "Oswald", "Arial", sans-serif;
+	font-family: "Oswald", "Tahoma", sans-serif;
 	font-size: 16px;
 	line-height: 24px;
 	font-weight: 400;
