--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -30,20 +30,52 @@
 
 .map__map-wrapper {
 	position: relative;
+
+	height: 362px;
+
+	background-color: #fdf7f0;
+
+	&--pin {
+
+		&::before {
+			content: "";
+
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			z-index: 2;
+
+			width: 53px;
+			height: 45px;
+
+			background-image: 
+			  url("../img/map/map-pin.png");
+			background-repeat: no-repeat;
+			background-position: 50%;
+			background-size: 53px 45px;
+
+			transform: translate(-50%, -50%);
+		}
+	}
 }
 
 .map__img {
 	position: absolute;
 	top: 0;
-	z-index: -1;
+	left: 50%;
+	z-index: 1;
 
-	width: 100%;
+	width: 320px;
 	height: 362px;
+
+	transform: translateX(-50%);
 }
 
 .map__google {
 	width: 100%;
 	height: 362px; 
+
+	border: 0;
 }
 
 @media (min-width: $tablet-width) {
@@ -72,12 +104,31 @@
 		padding-top: 20px;
 	}
 
+	.map__map-wrapper {
+		height: 396px;
+
+		&--pin {
+			
+			&::before {
+				top: 54%;
+
+				width: 105px;
+				height: 90px;
+
+				background-size: 105px 90px;
+
+				transform: translate(-50%, -54%);
+			}
+		}
+	}
+
 	.map__img {
+		width: 768px;
 		height: 396px;
 	}
 
 	.map__google {
-		height: 396px;
+		height: 396px; 
 	}
 }
 
@@ -87,7 +138,7 @@
 	}
 
 	.map__wrapper {
-		padding-left: calc((100vw - 1300px)/2 + 40px);
+		padding-left: calc(50vw - 610px);
 	}
 
 	.map__address-wrapper {
@@ -116,7 +167,21 @@
 		padding-top: 20px;
 	}
 
+	.map__map-wrapper {
+		height: 400px;
+
+		&--pin {
+			
+			&::before {
+				left: calc(50vw + 288px);
+
+				transform: translate(0, -54%);
+			}
+		}
+	}
+
 	.map__img {
+		width: 1440px;
 		height: 400px;
 	}
 
