--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -8,7 +8,7 @@
 }
 
 .map__text {
-	width: 140px;
+	width: 120px;
 
 	font-size: 16px;
 	line-height: 20px;
@@ -19,13 +19,14 @@
 
 .map__address {
 	margin: 0;
-	width: 140px;
+	width: 120px;
 
 	font-family: "Arial", sans-serif;
 	font-size: 14px;
 	line-height: 20px;
 	font-weight: 400;
 	color: #444444;
+	text-align: right;
 }
 
 .map__map-wrapper {
@@ -87,13 +88,13 @@
 	}
 
 	.map__text {
-		width: 155px;
+		width: 120px;
 		font-size: 20px;
 		line-height: 25px;
 	}
 
 	.map__address {
-		width: 160px;
+		width: 220px;
 
 		font-size: 16px;
 		text-align: right;
@@ -154,8 +155,8 @@
 	}
 
 	.map__text {
-		width: 169px;
-		margin-right: 80px; 
+		width: 100px;
+		margin-right: 90px; 
 	}
 
 	.map__address {
